sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:10: error: not found: value Swap
      Swap(i,i+1);
      ^